--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 <h1
         style="color: #fff;font-size: 32px;margin-bottom: 0px;text-align: left;margin-left:
             40px;">Star Wars</h1>
+<h3
+        style="color: #fff;font-size: 18px;margin-bottom: 0px;text-align: left;margin-left:
+            40px;"> This interactive graph covers 7 Star Wars films, including 87 Characters, 21 Planets, 37 Starships, 39 Vehicles, and 37 Species. You can see more  with mouse moving. Of course, you can also enter Luke in the search box on the left to find your Jedi Knight!</h3>
 
 <div style="text-align: center;position: relative;">
     <svg width="800" height="560" style="margin-left: 80px;margin-bottom: -40px;" id="svg1"></svg>
